docker.io (0.6.7+dfsg1-3) UNRELEASED; urgency=medium

  * Fixed FTBFS on non-amd64 platforms by setting the correct GOPATH.

 -- Tianon Gravi <admwiggin@gmail.com>  Thu, 09 Jan 2014 15:26:38 +0000

docker.io (0.6.7+dfsg1-2) unstable; urgency=medium

  * Added iptables dependency required for Docker to start.
  * Added ca-certificates recommend required for pulling from the index.

 -- Tianon Gravi <admwiggin@gmail.com>  Wed, 08 Jan 2014 19:14:02 -0500

docker.io (0.6.7+dfsg1-1) unstable; urgency=medium

  * Initial release (Closes: #706060, #730569)
  * Document missing licenses in the source tree. Bad, paultag. Thanks
    alteholz.

 -- Paul Tagliamonte <paultag@debian.org>  Tue, 07 Jan 2014 21:06:10 -0500